# verba

./: .gitignore  Makefile  README.md  docker-compose.yml  index.html  package.json  tailwind.config.ts
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_auth_tables.py  0002_create_oauth_accounts.py  6304954d8501_create_auth_tables.py  661f41af1e98_add_chunk_full_text_search_column.py  8253dce212e2_add_chat_documents_scope_table.py  83bb91f9faf2_create_message_cirations_table.py  bcc9cd88c3a6_create_document_tables.py  d49afb8f16fb_create_chat_and_message_tables.py  e46bc1145740_add_password_hash_to_users.py
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  errors.py  logging.py  rate_limit.py  request_context.py  security.py  sse.py
backend/app/crud/: __init__.py  chat.py  chat_document.py  chunk_embedding.py  document.py  document_chunk.py  health.py  message.py  message_citation.py  oauth_account.py  session.py  user.py  user_setting.py
backend/app/models/: __init__.py  auth_session.py  chat.py  chat_document.py  chunk_embedding.py  document.py  document_chunk.py  message.py  message_citation.py  oauth_account.py  user.py  user_setting.py
backend/app/schemas/: auth.py  chat.py  document.py  health.py  message.py  settings.py  user.py
backend/app/services/: auth_service.py  chat_document_service.py  chat_service.py  document_service.py  health_service.py  message_service.py  (+5 more)
backend/evals/: dataset.py  metrics.py  run_retrieval.py
backend/scripts/: cleanup_orphans.py  inspect_chunking.py  inspect_embedding.py
backend/tests/: conftest.py  test_auth_routes.py  test_auth_service.py  test_chat_document_service.py  test_chat_routes.py  test_chat_service.py  test_chunking.py  test_config.py  test_document_routes.py  test_document_service.py  test_embedding.py  test_error_envelope.py  test_evaluation.py  test_fusion.py  test_generation.py  test_health.py  test_ingestion_service.py  test_message_routes.py  test_message_service.py  test_models.py  test_oauth_service.py  test_parsing.py  test_query_rewriting.py  test_rate_limit.py  test_readiness.py  test_request_context.py  test_reranking.py  test_retrieval.py  test_session_service.py  test_settings_routes.py  test_settings_service.py  test_storage.py  test_tenant_isolation.py  test_vector_store.py
(+88 files in other folders)
