[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-qa-rag-backend"
version = "0.1.0"
description = "FastAPI backend for document-qa-rag"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2.0",
  "bcrypt>=4.1,<5.0",
  "boto3>=1.34,<2.0",
  "fastapi>=0.115,<1.0",
  "google-auth[requests]>=2.30,<3.0",
  "pydantic[email]>=2.6,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "python-multipart>=0.0.9,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
# Alembic migrations are machine-generated and env.py has intentional import ordering.
extend-exclude = ["alembic"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency injectors are called in argument defaults by design (B008).
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Body",
  "fastapi.Cookie",
  "fastapi.Header",
  "fastapi.Form",
  "fastapi.File",
]
